# llm-ds-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: ab-readout-example.md  ab-readout-rendered-example.md  anomaly-decomposition-example.md  exec-summary-example.md  run_ab_readout.py  sql-drafting-example.md
llm_ds_workflow/: __init__.py  __main__.py  core.py
patterns/: 01-schema-anchored-sql.md  02-cohort-clarifier.md  03-sql-self-review.md  04-ab-readout-skeleton.md  05-calibrated-language.md  06-null-result-framing.md  07-exec-tldr.md  08-slack-ready.md  09-pre-mortem.md  10-metric-sanity-check.md  11-anomaly-decomposition.md
templates/: ab-readout.txt  cursorrules-example.txt  exec-summary.txt  sql-draft.txt
tests/: test_core.py
