[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ds-workflow"
version = "0.1.0"
description = "A small library over the prompt patterns in this repo — load and render templates from Python."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Sourabh Koul"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "pyyaml>=6.0"]

[project.scripts]
llm-ds-workflow = "llm_ds_workflow.__main__:main"

[tool.setuptools.packages.find]
include = ["llm_ds_workflow*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
